Modernise & clean up server code